# cli

./: .env  Cargo.toml  README.md  schema.graphql
.github/workflows/: gh-action-test.yml  integration-tests.yml
docs/diagrams/: auth.mmd
src/: main.rs
src/auth/: mod.rs
src/auth/login/: mod.rs  take_user_id_from_token.rs
src/auth/login/graphql/: cli_access_tokens.graphql  cli_access_tokens.rs  mod.rs  user_by_pk.graphql  user_by_pk.rs
src/auth/logout/: mod.rs
src/common/: authorization_headers.rs  colorful_theme.rs  config.rs  execute_graphql_request.rs  fetch_user_id.rs  format_relative_time.rs  keyring.rs  keyring_for_test.rs  lengify.rs  mod.rs  pad_to_column_width.rs  print_formatted_error.rs  query_full_id.rs  read_env_file.rs  slugify.rs  table.rs  take_user_id_from_token.rs  tokio_runtime.rs  validate_name.rs  validate_project_name.rs  validate_secret_field_name.rs  validate_secret_name.rs  validate_team_name.rs  vendors.rs  write_env_file.rs
src/common/graphql/: Insert_secret_sharing_record.graphql  generate_secret_sharing_url.graphql  generate_secret_sharing_url.rs  generate_secret_sharing_url_OLD.rs  insert_secret_sharing_record.rs  me.rs  mod.rs  search_project_by_id.graphql  search_project_by_id.rs  search_team_by_id.graphql  search_team_by_id.rs  search_token_by_id.graphql  search_token_by_id.rs  search_usage_history_by_id.graphql  search_usage_history_by_id.rs  search_user_by_id.graphql  search_user_by_id.rs  search_user_secret_by_id.graphql  search_user_secret_by_id.rs
src/common/list/: list.rs  mod.rs  paging.rs  render.rs
src/projects/: mod.rs
src/projects/common/: mod.rs  project_info_by_slug.rs
src/projects/common/graphql/: project_info.graphql  project_info.rs
src/projects/create/: mod.rs
src/projects/create/graphql/: check_team_name.graphql  check_team_name.rs  create_project.graphql  create_project.rs  mod.rs  team_id_by_slug.graphql  team_id_by_slug.rs  team_info_by_slug.graphql  team_info_by_slug.rs  team_slug.graphql  team_slug.rs
src/projects/delete/: mod.rs
src/projects/delete/graphql/: delete_project.graphql  delete_project.rs  mod.rs
src/projects/edit/: mod.rs
src/projects/edit/graphql/: mod.rs  project_info.graphql  project_info.rs  (+4 more)
src/projects/list/: mod.rs
src/projects/share/: mod.rs
src/projects/tokens/: mod.rs
src/projects/usage/: mod.rs
src/projects/view/: mod.rs
src/secrets/: mod.rs
src/secrets/common/: mod.rs  secret_info_by_slug.rs
src/secrets/create/: mod.rs
src/secrets/delete/: mod.rs
src/secrets/drop/: mod.rs
src/secrets/edit/: mod.rs
src/secrets/list/: mod.rs
src/secrets/share/: mod.rs
src/secrets/view/: mod.rs
src/teams/: mod.rs
src/teams/create/: mod.rs
src/teams/delete/: mod.rs
src/teams/edit/: mod.rs
src/teams/leave/: mod.rs
src/teams/list/: mod.rs
src/teams/user/: mod.rs
src/teams/view/: mod.rs
src/tokens/: mod.rs
src/tokens/create/: mod.rs
src/tokens/delete/: mod.rs
src/tokens/list/: mod.rs
src/tokens/regenerate/: mod.rs
tests/: cli_tests.rs  help.rs  projects.rs  secrets.rs  teams.rs  tokens.rs
(+107 files in other folders)
