[package]
name = "zero-cli"
description = "A command line tool for Zero Secrets Manager"
version = "2.0.0"
authors = ["Zero <team@tryzero.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://tryzero.com"
repository = "https://github.com/zerosecrets/cli"
keywords = ["cli", "zero", "secrets", "password", "security"]
categories = ["command-line-utilities"]
edition = "2021"
exclude = ["docs/*"]

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.3.19", features = ["derive"] }
dialoguer = "0.11.0"
graphql_client = "0.13.0"
keyring = "2.0.5"
open = "5.0.0"
regex = "1.10.2"
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.103"
strum = "0.25.0"
strum_macros = "0.25.3"
termimad = "0.25.2"
tokio = { version = "1.32.0", features = ["full"] }
uuid = { version = "1.4.1", features = ["serde"]}
