[package]
name = "zero-cli"
description = "A command line tool for Zero Secrets Manager"
version = "2.6.0"
authors = ["Zero <team@tryzero.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://tryzero.com"
repository = "https://github.com/zerosecrets/cli"
keywords = ["cli", "zero", "secrets", "password", "security"]
categories = ["command-line-utilities"]
edition = "2021"
exclude = ["docs/*"]

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
dialoguer = "0.11.0"
dotenv = "0.15"
graphql_client = "0.14.0"
keyring = "2.3.2"
lazy_static = "1.5.0"
open = "5.1.2"
rand = "0.8.5"
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
strum = "0.26.2"
strum_macros = "0.26.2"
termimad = "0.29.2"
tokio = { version = "1.37.0", features = ["full"] }
uuid = { version = "1.8.0", features = ["serde"]}

[dev-dependencies]
rexpect = "0.5.0"

[features]
default = []
integration-test = []
